<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.umxplore.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_produk"
            app:destination="@id/navigation_produk" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.umxplore.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_produk"
            app:destination="@id/navigation_produk" />
    </fragment>

    <fragment
        android:id="@+id/navigation_produk"
        android:name="com.example.umxplore.ui.dashboard.ProdukFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_produk" >
        <action
            android:id="@+id/action_navigation_produk_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>


    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.umxplore.ui.akun.AkunFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_akun" >
        <action
            android:id="@+id/action_navigation_akun_to_navigation_masuk"
            app:destination="@id/navigation_masuk" />
    </fragment>

    <fragment
        android:id="@+id/navigation_masuk"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_masuk_activity" >
        <action
            android:id="@+id/action_navigation_masuk_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>


    <fragment
        android:id="@+id/navigation_akun_terdaftar"
        android:name="com.example.umxplore.ui.akun.AkunTerdaftarFragment"
        android:label="Akun Terdaftar"
        tools:layout="@layout/fragment_akun_terdaftar" />





    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.umxplore.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_faq_to_navigation_faq1"
            app:destination="@id/navigation_faq1" />
        <action
            android:id="@+id/action_navigation_faq_to_navigation_faq2"
            app:destination="@id/navigation_faq2" />
        <action
            android:id="@+id/action_navigation_faq_to_navigation_faq3"
            app:destination="@id/navigation_faq3" />
        <action
            android:id="@+id/action_navigation_faq_to_navigation_faq4"
            app:destination="@id/navigation_faq4" />
        <action
            android:id="@+id/action_navigation_faq_to_navigation_faq5"
            app:destination="@id/navigation_faq5" />
        <action
            android:id="@+id/action_navigation_faq_to_navigation_faq6"
            app:destination="@id/navigation_faq6" />
        <action
            android:id="@+id/action_navigation_faq_to_navigation_faq7"
            app:destination="@id/navigation_faq7" />
        <action
            android:id="@+id/action_navigation_faq_to_navigation_faq8"
            app:destination="@id/navigation_faq8" />
    </fragment>


    <fragment
        android:id="@+id/navigation_faq1"
        android:name="com.example.umxplore.ui.notifications.FAQ1Fragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_f_a_q1" >
        <action
            android:id="@+id/action_navigation_faq1_to_navigation_faq"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faq2"
        android:name="com.example.umxplore.ui.notifications.FAQ2Fragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_f_a_q2" >
        <action
            android:id="@+id/action_navigation_faq2_to_navigation_faq"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faq3"
    android:name="com.example.umxplore.ui.notifications.FAQ3Fragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_f_a_q3" >
        <action
            android:id="@+id/action_navigation_faq3_to_navigation_faq"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faq4"
    android:name="com.example.umxplore.ui.notifications.FAQ4Fragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_f_a_q4" >
        <action
            android:id="@+id/action_navigation_faq4_to_navigation_notification"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faq5"
        android:name="com.example.umxplore.ui.notifications.FAQ5Fragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_f_a_q5" >
        <action
            android:id="@+id/action_navigation_faq5_to_navigation_faq"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faq6"
        android:name="com.example.umxplore.ui.notifications.FAQ6Fragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_f_a_q6" >
        <action
            android:id="@+id/action_navigation_faq6_to_navigation_faq"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faq7"
        android:name="com.example.umxplore.ui.notifications.FAQ7Fragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_f_a_q7" >
        <action
            android:id="@+id/action_navigation_faq7_to_navigation_faq"
            app:destination="@id/navigation_faq" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faq8"
        android:name="com.example.umxplore.ui.notifications.FAQ8Fragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_f_a_q8" >
        <action
            android:id="@+id/action_navigation_faq8_to_navigation_faq"
            app:destination="@id/navigation_faq" />
    </fragment>




</navigation>